# utf8-console-chess

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: cmake.yml  test-report.yml
src/: ChessBoard.cpp  ChessBoard.h  ChessBoard.hpp  ChessPosition.cpp  ChessPosition.hpp  FENReader.cpp  FENReader.hpp  Printer.cpp  Printer.hpp  u8cc.cpp  u8cc.hpp
src/main/cpp/: ChessBoard.cpp  ChessPosition.cpp  FENReader.cpp  Printer.cpp  printer.cpp  u8cc.cpp
src/main/headers/: ChessBoard.h  ChessPosition.h  FENReader.h  Printer.h  printer.h  u8cc.h
test/: CMakeLists.txt  test.cpp  test_FENReader.cpp
